# gatekeeper

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  build_debug.sh  build_release.sh
api/: aci_condition.h  allocator.h  bind_request.c  bind_request.h  bind_request_client.h  bind_request_connection.h  bind_request_status.h  logger.h  plugin.h  reporter.h
api/aci_rule/: aci_rule.c  aci_rule.h  aci_rule_condition.h  aci_rules_evaluator.c  aci_rules_evaluator.h  aci_rules_parser.h
api/bind_request/: bind_request.c  bind_request.h  bind_request_client.c  bind_request_client.h  bind_request_connection.c  bind_request_connection.h  bind_request_reporter.h  bind_request_state.h
api/extensions/: logger.h  parser.h  reporter.h
api/requests/: bind_request_client_t.c  bind_request_client_t.h  bind_request_datetime_t.c  bind_request_datetime_t.h  bind_request_t.c  bind_request_t.h
core/include/: aci_rule.h  bind_policy.h  bind_request.h  plugin.h  plugin_bootstrap.h  plugin_registration.h
core/src/: bind_policy.c  plugin_registration.c
core/tests/: evaluate_request_against_deny_aci_rule.c  evaluate_request_against_grant_aci_rule.c
include/: aci_rule.h  bind_policy.h  bind_request.h  bind_request_t.h  binding_policy.h  binding_policy_t.h  flags.h  logger.h  plugin.h  policy_provider.h  string.h  string_t.h
include/aci_rule/: aci_rule.h  aci_rule_condition.h  aci_rule_condition_evaluator.h  aci_rule_evaluator.h  aci_rule_event_dispatcher.h  aci_rule_operation.h  aci_rule_operation_resolver.h  aci_rule_resolver.h
include/bind_request/: bind_request.h  bind_request_evaluator.h  bind_request_event_dispatcher.h  bind_request_handler.h  bind_request_resolver.h  bind_request_resolver_error.h  bind_request_resolver_errors.h  bind_request_status.h
include/plugin_registration/: plugin_registration_errors.h  plugin_registration_event_dispatcher.h  plugin_registration_handler.h  plugin_registration_status.h
lib/: aci_rule_operation_provider.c  aci_rule_operation_provider.h  bind_request_evaluator.c  bind_request_evaluator.h  bind_request_initializer.c  bind_request_initializer.h  plugin_bootstrapper.c  plugin_bootstrapper.h  plugin_registration_handler.c
lib/abstractions/: bind_policy_provider.h  bind_request_event_handlers.h  plugin_registration_event_handlers.h
lib/aci_rule/: aci_rule.h  (+7 more)
plugin/: bind_request_resolver.c  bootstrap.c  events.c  plugin.c  plugin_bootstrap.c  policy.c
resources/: setup-ds-admin.pl
sdk/: CMakeLists.txt  bind_request.c  binding_policy.c  ds_allocator.c  ds_logger.c  logging_policy.c  std_allocator.c  string.c
src/: CMakeLists.txt  bootstrap.c  evaluator.c  events.c  plugin.c  plugin.h  plugin_events_handler.c  plugin_policy_provider.c  policy.c
src/abstractions/: aci_rules_parser.h  plugin_action_reporter.h
src/allocators/: allocator.h  slapi_allocator.c  std_allocator.c
src/bootstrap/: events.c  plugin.c
src/enumerations/: aci_rule_condition_operation.h  aci_rule_condition_parameter.h  authentication_method.h  bind_request_status.h  plugin_registration_status.h
src/events/: bind_request_events.h  plugin_registration_events.h
src/framework/aci_rule/: aci_rule.h  aci_rule_condition_evaluator.c  aci_rule_condition_evaluator.h  aci_rule_conditions.h  aci_rule_evaluator.c  aci_rule_evaluator.h  aci_rule_operation_provider.c  aci_rule_provider.h  test.c
src/framework/aci_rule/abstractions/: aci_rule.h  aci_rule_condition.h  aci_rule_evaluator.h  aci_rule_expression.h  aci_rule_operand.h  aci_rule_operation.h  aci_rule_operation_provider.h  aci_rule_operation_type.h  aci_rule_operator.h  aci_rule_operator_type.h  aci_rule_parameter.h  aci_rule_resource_type.h
src/framework/aci_rule/conditions/: aci_rule_attributes_condition.c  aci_rule_day_of_week_condition.c  aci_rule_dn_condition.c  aci_rule_dns_condition.c  aci_rule_groups_condition.c  aci_rule_ip_condition.c  aci_rule_roles_condition.c  aci_rule_time_of_day_condition.c  attributes.c  day_of_week.c  dn.c  dns.c
src/framework/aci_rule/operations/: attributes.c  day_of_week.c  dn.c  dns.c  groups.c  ip.c  roles.c  time_of_day.c
src/framework/bind_request/: bind_request.h  bind_request_evaluator.c  bind_request_events.h  bind_request_handler.c  bind_request_provider.c  bind_request_provider.h  bind_request_status.h
src/framework/bind_request/abstractions/: bind_request.h  bind_request_evaluator.h  bind_request_events.h  bind_request_handler.h  bind_request_provider.h  bind_request_status.h
src/framework/plugin_registrar/: plugin_registrar.c  plugin_registrar_actions.c
src/framework/plugin_registrar/abstractions/: plugin_registrar.h  plugin_registrar_actions.h  plugin_registrar_events.h  plugin_registrar_status.h
src/loggers/: logger.h  slapd_logger.c  slapi_logger.c  std_logger.c
src/models/: binding_policy.c  binding_policy.h  logging_policy.c  logging_policy.h
src/models/aci_rules/: aci_rule.h  aci_rule_condition.h  aci_rule_condition_operand.h
src/models/bind_requests/: bind_request.h
src/models/ldap_clients/: ldap_client.h
src/models/ldap_connections/: ldap_connection.h
src/modules/: aci_rule_evaluator.h
src/parsers/: binding_policy_parser.h  logging_policy_parser.c  logging_policy_parser.h
src/parsers/xf/: xf_binding_policy_parser.c  xf_binding_policy_parser.h  xf_logging_policy_parser.c  xf_logging_policy_parser.h
src/plugin/: plugin.c  plugin.h
src/providers/: binding_policy_provider.h  logging_policy_provider.h
src/providers/xf/: xf_binding_policy_provider.c  xf_logging_policy_provider.c
src/types/: binding_policy.c  binding_policy.h  logging_policy.c  logging_policy.h  string.c  string.h
src/utilities/: array.c  array.h  flag_utils.c  flag_utils.h  flags.c  flags.h  string.c  string.h  string_utils.c  string_utils.h
src/validators/: binding_policy_validator.c  binding_policy_validator.h  logging_policy_validator.c  logging_policy_validator.h
tools/: xf_binding_policy_evaluator.c  xf_logging_policy_evaluator.c
user/: bind_policy_provider.c  bind_request_event_handlers.c  plugin_registration_event_handlers.c
(+85 files in other folders)
